--- a/module2-solution/CSS/module2.css
+++ b/module2-solution/CSS/module2.css
@@ -17,8 +17,8 @@ h1 {
   padding: 10px 0 10px 0;
   margin-top: 0;
 }
-.body {
- background-color:Tomato; 
+body {
+ background-color: Tomato; 
 }
 .description {
   padding: 45px 10px 5px 10px;
